sass/main.scss
html {
    font-size: 18px;
}

body {
    max-width: 600px;
    margin: auto;
    background: rgb(230, 230, 230);
    font-family: sans-serif;
    line-height: 1.4;
    padding: 0 1em;
}

header, footer {
    text-align: center;
    padding: 1rem 0;
}

footer div {
    margin-bottom: 1em;
}

footer div:last-child {
    margin-bottom: 0;
}

header {
    border-bottom: 1px solid black;
    display: flex;
    justify-content: center;
    gap: 0.2rem;
    flex-wrap: wrap;
}

footer {
    border-top: 1px solid black;
    padding-top: 1rem;
    margin-top: 1rem;
    font-size: 0.8rem;
}

a {
    color: black;
}

header a {
    padding: 0.2rem 0.5rem;
}

@-moz-document url-prefix() {
    header a {
        padding-top: 0.3rem;
    }
}

header a, header a:visited {
    font-size: 1.5rem;
}

header a.active-section {
    text-decoration: none;
    box-shadow: inset 0 0 0 2px #000;
}

header a:hover:not(.active-section) {
    background-color: rgb(205, 205, 205);
}

div.footnote-definition:last-of-type {
    margin-block-end: 1em;
}

div.footnote-definition p {
    display: inline;
    font-size: 0.85rem;
}

main a:visited, main a {
    color: black;
    background-color: rgb(223, 230, 255);
}

.section-index a {
    background-color: transparent;
}

sup a {
    background-color: transparent;
}

code {
    color: #757575;
}

@import "_syntax_highlighting.scss";
@import "_sections.scss";

article {
    table {
        width: 100%;
        border-collapse: collapse;
        border: 1px solid #717171;

        th, td {
            padding: 8px;
            text-align: left;
            border-bottom: 1px solid #717171;
        }
        
        th {
            background-color: #adadad;
        }
        
        tbody tr:nth-child(even) {
            background-color: #c7c7c7;
        }
        
        tbody tr:nth-child(odd) {
            background-color: #dfdfdf;
        }
    }
}

